# SmallLang

./: CHANGELOG.md  README.md  SmallLang.cabal
app/: Interpreter.hs  Lexer.hs  Main.hs  Parser.hs
