cabal-version:      2.4
name:               SmallLang
version:            0.1.0.0

license:            MIT
author:             SRAZKVT
maintainer:         sarah.mathey66666@gmail.com

executable SmallLang
    main-is:          Main.hs
    other-modules:    Parser,
                      Lexer,
                      Interpreter
    build-depends:    base ^>=4.16.3.0,
                      containers >= 0.6.5 && < 0.7,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall
